--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Art</a>
+                        <a href="art.html">Art</a>
                     </li>
                     <li>
-                        <a href="#">Design</a>
+                        <a href="resume.html">Resume</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
